button size & alignment fixed

--- a/RockPaperScissor/app.css
+++ b/RockPaperScissor/app.css
@@ -49,8 +49,14 @@ body {
 .section{
   z-index: 49;
 }
+
+.buttons{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .input-btn {
-  font-size: 5rem;
+  font-size: 6rem;
   border: none;
   outline: none;
   background-color: transparent;
